fixed holiday sale div to align in middle

--- a/style.css
+++ b/style.css
@@ -268,11 +268,16 @@ welcome {
 
 /* holiday sale section */
 .holidasale-section {
-    max-width: 1320px;
+    /* max-width: 1320px;
     margin-top: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: center; */
 
+
+    display: flex;
+    justify-content: center;
+    max-width:1320px;
+    margin:auto;
 
 }
 
@@ -313,44 +318,52 @@ welcome {
 
 .holiday-sale-description {
     color: rgba(7, 2, 17, 0.60);
-    margin-left: 180px;
+    /* margin-left: 180px; */
     max-width: 1060px;
     text-align: center;
     font-family: Inter;
     font-size: 20px;
     font-weight: 500;
     line-height: 32px;
+    display: flex;
+    justify-content: center;
+    margin:auto;
+
 
 }
 
 
 /* bonus part */
 .container {
-    position: relative;
-    margin-left: 70px;
-    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    position:relative;
+    max-width: 1320px;
+    /* margin-left: 70px;
+    margin-top: 50px; */
 }
 
 .bonus-image2 {
-    position: absolute;
-    left: 930px;
+    position:absolute;
+    margin-left: 890px;
 }
 
 .bonus-image4 {
-    position: absolute;
-    left: 780px;
+    position:absolute;
+    margin-left: 470px;
     margin-top: 80px;
 }
 
 .bonus-image1 {
     position: absolute;
-    left: 40px;
-    top: 430px;
+    margin-top: 430px;
+
 }
 
 .bonus-image3 {
     position: absolute;
-    left: 70px;
+    margin-left: -600px;
 }
 
 /* gift section */
